--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,6 @@
-//
+//includo le pvari partials di sass
+@import 'partials/variables';
+@import 'partials/common';
+@import 'partials/header';
+@import 'partials/main';
+@import 'partials/footer';
