--- a/resources/sass/partials/_variables.scss
+++ b/resources/sass/partials/_variables.scss
@@ -1,6 +1,10 @@
 //color
-$secondary_color: #002d73;
-$brand_color: #b2e5fc;
+$brand_color: #002d73;
+$secondary_color: #b2e5fc;
+$prodotto_colour: #b8dae4;
 $text_color: #848d9b;
+
+
 //sizes
 $container: 1200px;
+$container-margin: 80%;
