--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -5,12 +5,37 @@
     padding: 0;
     box-sizing: border-box;
   }
+
   .container {
     max-width: $container;
     width: 100%;
     margin: 0 auto;
+    
   }
+  .container-margin {
+    width: $container-margin;
+    margin: 0 auto;
+  }
+
   body {
-    font-family:
+    font-family: 'Open Sans', sans-serif;
+  }
+
+  h2 {
+    font-weight:500; 
+    text-transform: uppercase;
+    margin:  5px;
+    color: $brand_color;
+  }
+
+  h3 {
+    font-weight:600; 
+    text-transform: uppercase;
+  }
+
+  h1 {
+    font-weight:500; 
+    text-transform: uppercase;
+    margin:  5px;
   }
   
