--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -24,7 +24,7 @@
   
   .container-main {
     padding: 40px 0;
-    background-color:mistyrose;
+    background-image: url("../img/fondo-pag-speciali.jpg");
   }
 
   .product {
